Fix main-nav elements being treated as generic primary, secondary btn
With the recent (and very welcoming) changes to steer away for generic
elements such as div and instead use more appropriate/semantic
elements such as button we ended up applying new rules to main-nav
buttons. These rules were only intended to be apply to classic
buttons (rectangle + text inside). Result:
	- userlistheader even if invisible was getting a background
	on mouseover
	- all <button> elements were getting extra padding and margin

--- a/browser/css/btns.css
+++ b/browser/css/btns.css
@@ -18,8 +18,8 @@ button.jsdialog img {
 	flex-wrap: wrap;
 }
 
-.button-secondary,
-button:not(.ui-tab):not(.ui-corner-all):not(.button-primary):not(.unobutton):not(.form-field-button) {
+:not(.main-nav) .button-secondary,
+:not(.main-nav) > div > button:not(.ui-tab):not(.ui-corner-all):not(.button-primary):not(.unobutton):not(.form-field-button) {
 	box-sizing: border-box;
 	height: 32px;
 	line-height: 0em;
